--- a/src/nps/Search/nps.css
+++ b/src/nps/Search/nps.css
@@ -22,3 +22,15 @@
   color: white;
   transition: 0.3s;
 }
+
+@media screen and (min-width: 577px) {
+  .eh-sizing {
+    width: 75%;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .eh-sizing {
+    width: 50%;
+  }
+}
