Create UI for reviews on individual park pages

--- a/src/Park/index.css
+++ b/src/Park/index.css
@@ -1,5 +1,7 @@
 
-.eh-sticky {
-  position: sticky;
-  top: 95px;
+@media screen and (min-width: 768px){
+  .eh-sticky {
+    position: sticky;
+    top: 95px;
+  }
 }
