--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,6 +1,26 @@
 .pos-fixed {
     position: fixed;
-    right: 20px;
+    right: 5%;
     top: 15%;
+}
+
+.pos-fixedWelcome {
+    position: fixed;
+    left: 12%;
+    top: 42%;
+}
+
+.pos-fixedInit {
+    position: fixed;
+    left: 20%;
+    top: 50%;
+    color: cyan;
+}
+
+.pos-fixedHi {
+    position: fixed;
+    left: 45%;
+    top: 40%;
+    color: cyan;
 }
 
