--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -7,7 +7,7 @@
 .pos-fixedWelcome {
     position: fixed;
     left: 12%;
-    top: 42%;
+    top: 30%;
 }
 
 .pos-fixedInit {
@@ -23,4 +23,11 @@
     top: 40%;
     color: cyan;
 }
+
+.pos-background {
+    height: auto;
+    /*height: 90vh;*/
+}
+
+
 
