--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -30,8 +30,8 @@
 }
 
 .pos-descriptionColor{
-    background: lightblue;
-    color: cornflowerblue;
+    background: rgb(149, 177, 143);
+    color: rgb(85, 130, 83);
 }
 
 .pos-descriptionText{
